Fix finish button appearing behind commentary

--- a/styles/demo-default.css
+++ b/styles/demo-default.css
@@ -295,5 +295,6 @@
     height: 5rem;
     border-radius: 2rem;
     cursor: pointer;
+    z-index: 6;
 }
 
